--- a/package.json
+++ b/package.json
@@ -6,29 +6,42 @@
   "author": "Richard Van Camp",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf ./build",
+    "dev": "npm run clean && cross-env NODE_ENV=development && webpack --progress --colors --watch",
+    "build": "npm run clean && cross-env NODE_ENV=development && webpack --progress --colors",
+    "build:prod": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors",
+    "lint": "eslint popup content background --ext .js --ext .json",
     "format": "prettier-standard '**/*.js'"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^19.0.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-jest": "^19.0.0",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.8",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "prettier-standard": "^4.1.0",
     "rimraf": "^2.6.1",
+    "style-ext-html-webpack-plugin": "^3.4.1",
+    "style-loader": "^0.16.1",
     "webpack": "^2.4.1"
   },
   "dependencies": {
+    "eslint": "^3.19.0",
     "react": "^15.5.4",
     "react-chrome-redux": "^1.3.2",
     "react-dom": "^15.5.4",
