--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,21 @@
 {
   "presets": [
     "react",
+    "stage-0",
     ["env", {
       "targets": {
         "chrome": 52
       }
     }]
+  ],
+  "plugins": [
+    "transform-runtime",
+    "babel-plugin-transform-regenerator",
+    [
+      "transform-react-remove-prop-types",
+      {
+        "mode": "wrap"
+      }
+    ]
   ]
 }
