--- a/package.json
+++ b/package.json
@@ -10,17 +10,39 @@
     "dev": "npm run clean && cross-env NODE_ENV=development && webpack --progress --colors --watch",
     "build": "npm run clean && cross-env NODE_ENV=development && webpack --progress --colors",
     "build:prod": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors",
-    "lint": "eslint popup content background --ext .js --ext .json",
-    "format": "prettier-standard '**/*.js'"
+    "lint": "eslint popup content background --ext .js --ext .json --cache",
+    "format": "prettier-standard '**/*.js'",
+    "test": "jest --notify --",
+    "test:coverage": "jest --coverage --",
+    "test:watch": "jest --watch --"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "*.js"
+    ],
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "setupFiles": [
+      "./utils/test_setup.js"
+    ]
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^19.0.0",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.3",
+    "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-jest": "^19.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^4.0.0",
@@ -34,14 +56,21 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "jest": "^19.0.2",
     "prettier-standard": "^4.1.0",
+    "redux-saga-test-plan": "^2.4.4",
     "rimraf": "^2.6.1",
     "style-ext-html-webpack-plugin": "^3.4.1",
     "style-loader": "^0.16.1",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "zip-webpack-plugin": "^1.1.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "eslint": "^3.19.0",
+    "firebase": "^3.9.0",
+    "ramda": "^0.23.0",
     "react": "^15.5.4",
     "react-chrome-redux": "^1.3.2",
     "react-dom": "^15.5.4",
