--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
     "prettier-standard": "^4.1.0",
+    "prop-types": "^15.5.8",
     "redux-saga-test-plan": "^2.4.4",
     "rimraf": "^2.6.1",
     "style-ext-html-webpack-plugin": "^3.4.1",
