--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "firebase-admin": "^4.1.2",
     "firebase-functions": "^0.5",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "secure-compare": "^3.0.1"
   },
   "private": true
