--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.8",
-    "secure-compare": "^3.0.1"
+    "redux-saga": "^0.14.8"
   }
 }
