--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,12 @@
   "version": "0.0.3",
   "background": {
     "scripts": ["background.js", "babel-polyfill.js"],
-    "persistent": true
+    "persistent": false
   },
   "browser_action": {
     "default_title": "Lounasjuna",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": "lounasjuna_32.png"
   },
   "content_scripts": [
     {
