--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
+    "classnames": "^2.2.5",
     "eslint": "^3.19.0",
     "firebase": "^3.9.0",
     "ramda": "^0.23.0",
