--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "scripts": ["background.js", "babel-polyfill.js"],
     "persistent": false
   },
-  "browser_action": {
+  "page_action": {
     "default_title": "Lounasjuna",
     "default_popup": "popup.html",
     "default_icon": "lounasjuna_32.png"
@@ -22,7 +22,7 @@
   ],
   "content_security_policy":"script-src 'self' https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
   "permissions": [
-    "activeTab",
+    "tabs",
     "identity",
     "https://www.lounaat.info/*"
   ],
