--- a/package.json
+++ b/package.json
@@ -73,10 +73,12 @@
     "eslint": "^3.19.0",
     "firebase": "^3.9.0",
     "ramda": "^0.23.0",
+    "rc-select": "^6.8.6",
     "react": "^15.5.4",
     "react-chrome-redux": "^1.3.2",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-select": "^1.0.0-rc.4",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.8"
   }
