--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "prettier-standard": "^4.1.0",
     "prop-types": "^15.5.8",
     "redux-saga-test-plan": "^2.4.4",
@@ -73,12 +75,14 @@
     "eslint": "^3.19.0",
     "firebase": "^3.9.0",
     "ramda": "^0.23.0",
-    "rc-select": "^6.8.6",
+    "rc-input-number": "^3.5.0",
     "react": "^15.5.4",
     "react-chrome-redux": "^1.3.2",
     "react-dom": "^15.5.4",
+    "react-overlays": "^0.7.0",
     "react-redux": "^5.0.4",
-    "react-select": "^1.0.0-rc.4",
+    "react-toolbox": "^2.0.0-beta.11",
+    "react-widgets": "^3.4.8",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.8"
   }
